--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "chess.js": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.26.2",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
     "react": "^19.1.0",
+    "react-chessboard": "^5.8.6",
     "react-dom": "^19.1.0",
+    "stockfish": "^17.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
