feat(21-03): add disk analysis to MCP server
- Add get_disk_analysis function to Python telemetry module
- Hierarchical directory traversal with timeout protection
- File type categorization (applications, documents, media, cache, etc.)
- Skip system directories and symlinks for safety
- 30-second cache to avoid expensive re-analysis
- Aggregate small files (<10MB) and limit to top 20 per level
- Add Tauri command get_disk_analysis with Rust types
- Install Visx dependencies for treemap visualization

--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "@tauri-apps/plugin-os": "^2.3.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
+    "@visx/group": "^3.12.0",
+    "@visx/hierarchy": "^3.12.0",
+    "@visx/responsive": "^3.12.0",
+    "@visx/scale": "^3.12.0",
+    "@visx/tooltip": "^3.12.0",
     "chess.js": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
