feat(life-manager): add settings panel, graceful degradation for missing API keys

--- a/opta-life-manager/.vercelignore
+++ b/opta-life-manager/.vercelignore
@@ -3,6 +3,15 @@ node_modules
 .git
 .archive
 .claude
+.serena
 *.tsbuildinfo
 .env.local
+.env
 wrangler.toml
+*.log
+*.md
+.DS_Store
+coverage
+__tests__
+*.test.*
+*.spec.*
