fix(01-03): resolve build blocking issues for production build
- Reinstalled dependencies to fix three.js module resolution
- Removed unused pageContentVariants import from Layout.tsx
- Production build now succeeds (macOS .app and .dmg)

--- a/apps/desktop/opta-native/package.json
+++ b/apps/desktop/opta-native/package.json
@@ -57,6 +57,7 @@
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
     "mcp-gemini-cli": "^0.3.1",
+    "postprocessing": "^6.38.2",
     "react": "^19.1.0",
     "react-chessboard": "^5.8.6",
     "react-dom": "^19.1.0",
