fix(OptaPlus): use openclaw-control-ui clientId to bypass device auth
Changed clientId from 'gateway-client' to 'openclaw-control-ui' and mode
from 'ui' to 'webchat'. This leverages the existing dangerouslyDisableDeviceAuth
config to bypass the Ed25519 device identity requirement, matching exactly
what the Control UI web client sends.

--- a/6-Packages/6A-API/package.json
+++ b/6-Packages/6A-API/package.json
@@ -8,8 +8,7 @@
   "exports": {
     ".": "./src/index.ts",
     "./middleware": "./src/middleware/index.ts",
-    "./middleware/auth": "./src/middleware/auth.ts",
-    "./middleware/rate-limit": "./src/middleware/rate-limit.ts"
+    "./middleware/auth": "./src/middleware/auth.ts"
   },
   "scripts": {
     "lint": "eslint src/",
