--- a/1-Apps/1D-Opta-CLI-TS/package.json
+++ b/1-Apps/1D-Opta-CLI-TS/package.json
@@ -1,7 +1,7 @@
 {
   "name": "opta-cli",
   "version": "0.1.0",
-  "description": "AI coding assistant CLI with local model support",
+  "description": "Agentic AI coding CLI powered by local LLMs",
   "author": "Opta Operations <matthew@optamize.biz>",
   "license": "MIT",
   "type": "module",
@@ -19,40 +19,30 @@
     "build": "tsup src/index.ts --format esm --dts --clean",
     "start": "node dist/index.js",
     "test": "vitest",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src",
     "format": "prettier --write src",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.52.0",
     "@inquirer/prompts": "^7.0.0",
     "chalk": "^5.3.0",
     "commander": "^13.0.0",
     "conf": "^13.0.0",
     "cosmiconfig": "^9.0.0",
-    "diff": "^7.0.0",
     "dotenv": "^16.4.0",
     "execa": "^9.0.0",
     "fast-glob": "^3.3.0",
-    "got": "^14.0.0",
-    "ink": "^5.0.0",
-    "ink-spinner": "^5.0.0",
     "marked": "^15.0.0",
     "marked-terminal": "^7.0.0",
     "nanoid": "^5.0.0",
     "openai": "^4.77.0",
     "ora": "^8.0.0",
     "p-queue": "^8.0.0",
-    "picocolors": "^1.1.0",
-    "tree-kill": "^1.2.0",
-    "ws": "^8.18.0",
     "yaml": "^2.5.0",
     "zod": "^3.24.0"
   },
   "devDependencies": {
-    "@types/diff": "^6.0.0",
     "@types/node": "^22.0.0",
-    "@types/ws": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.0.0",
