--- a/6-Packages/6D-UI/package.json
+++ b/6-Packages/6D-UI/package.json
@@ -17,8 +17,8 @@
     "format:check": "prettier --check src/"
   },
   "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
