--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "packageManager": "pnpm@9.15.0",
   "workspaces": [
     "6-Packages/*",
-    "1-Apps/1I-Web/*"
+    "1-Apps/1A-AI-Components-Web",
+    "1-Apps/1B-AICompare-Web",
+    "1-Apps/1F-Opta-Life-Web",
+    "1-Apps/1K-Optamize-Web"
   ],
   "scripts": {
     "dev:ai-components": "pnpm --filter aicomp dev",
