--- a/1-Apps/1I-OptaPlus/iOS/OptaPlusIOS/Info.plist
+++ b/1-Apps/1I-OptaPlus/iOS/OptaPlusIOS/Info.plist
@@ -9,6 +9,13 @@
 	</dict>
 	<key>UIUserInterfaceStyle</key>
 	<string>Dark</string>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>BackgroundColor</key>
+		<string>optaVoid</string>
+		<key>ImageName</key>
+		<string>AppIcon</string>
+	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>OptaPlus needs camera access to attach photos to messages.</string>
 </dict>
