feat(opta-lmx): inference bug fixes, API middleware, tool parser task
- engine.py: .new_text → .text (non-streaming), .chat() → .stream_chat() (streaming)
- New middleware.py for request handling
- Admin, health, inference, websocket API updates
- Config and pyproject.toml updates
- OPIS docs: APP.md, ROADMAP, MASTER-PLAN updates
- run.py convenience script
- Task: MiniMax XML tool parser plan (Hybrid A+C)

--- a/1-Apps/1J-Opta-LMX/pyproject.toml
+++ b/1-Apps/1J-Opta-LMX/pyproject.toml
@@ -58,3 +58,14 @@ select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "ASYNC", "T20"]
 [tool.mypy]
 python_version = "3.12"
 strict = true
+
+[[tool.mypy.overrides]]
+module = [
+    "llama_cpp",
+    "llama_cpp.*",
+    "vllm_mlx",
+    "vllm_mlx.*",
+    "huggingface_hub",
+    "huggingface_hub.*",
+]
+ignore_missing_imports = true
