fix: resolve all lint errors and unused imports
- Remove unused imports: checkInputConnection, getConnectionStatus (chat.ts)
- Remove unused imports: SlashHandler (display.ts, index.ts)
- Remove unused imports: box, kv (session.ts)
- Remove unused import: AgentMessage (types.ts)
- Prefix unused parameters with underscore: _elapsed (insights.ts), _ctx (manage.ts)
- Fix unused variable 'dot' in models.ts: now used to display load status
- All 8 lint errors fixed (351 warnings remain, acceptable)
- Build succeeds cleanly
- All 875 tests passing

Related to model discovery: LMX client connects to 192.168.188.11:1234
by default and uses /admin/* endpoints for model management.
The scan command queries models, available, presets, stack, and memory.

--- a/1-Apps/1E-Opta-Life-IOS/GoogleService.xcconfig
+++ b/1-Apps/1E-Opta-Life-IOS/GoogleService.xcconfig
@@ -1,16 +1,9 @@
 // Google Sign-In Configuration
-//
-// INSTRUCTIONS:
-// 1. Go to https://console.cloud.google.com/apis/credentials
-// 2. Create a new project or select existing one
-// 3. Click "Create Credentials" → "OAuth client ID"
-// 4. Select "iOS" as application type
-// 5. Enter Bundle ID: com.opta.lm.ios
-// 6. Copy the Client ID and paste below
-// 7. The reversed client ID is the client ID with dots replaced by dashes, reversed
-//    Example: 123456789-abcdef.apps.googleusercontent.com
-//    Reversed: com.googleusercontent.apps.123456789-abcdef
+// Configured: 2026-02-17 by Opta512
+// Project: Opta Ecosystem (Supabase)
 
-// Replace these with your actual Google OAuth credentials:
-GOOGLE_CLIENT_ID = YOUR_CLIENT_ID_HERE.apps.googleusercontent.com
-GOOGLE_REVERSED_CLIENT_ID = com.googleusercontent.apps.YOUR_CLIENT_ID_HERE
+// Google OAuth Client ID (created 2026-02-14)
+GOOGLE_CLIENT_ID = 88000480710-u0oftrjncotchck28pc8pjp9ok1gkp47.apps.googleusercontent.com
+
+// Reversed Client ID for URL Scheme
+GOOGLE_REVERSED_CLIENT_ID = com.googleusercontent.apps.88000480710-u0oftrjncotchck28pc8pjp9ok1gkp47
