--- a/1-Apps/1F-Opta-Life-Web/package.json
+++ b/1-Apps/1F-Opta-Life-Web/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@studio-freight/react-lenis": "^0.0.47",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.10",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.0",
     "googleapis": "^170.1.0",
