feat(opta-cli): TUI redesign, panel removal, test fixes, path updates
- Purple border theme across all TUI components
- Removed panel system (simplified layout)
- Fixed spaceBetween → space-between (9x TS2820 errors)
- Fixed test expectations: pricing, statusbar, HelpOverlay, InputBox
- testTimeout: 10000 added to vitest.config (prevents hung test suites)
- Added npm run test:tui / test:core scripts for fast targeted runs
- Updated lmxPath default: 1J-Opta-LMX → 1M-Opta-LMX in config.ts + tests
- 896/896 tests passing, 0 TypeScript errors

--- a/1-Apps/1D-Opta-CLI-TS/package.json
+++ b/1-Apps/1D-Opta-CLI-TS/package.json
@@ -19,6 +19,8 @@
     "build": "tsup src/index.ts --format esm --dts --clean",
     "start": "node dist/index.js",
     "test": "vitest",
+    "test:tui": "vitest tests/tui/",
+    "test:core": "vitest tests/core/ tests/utils/ tests/ui/",
     "lint": "eslint src",
     "format": "prettier --write src",
     "typecheck": "tsc --noEmit"
