--- a/1-Apps/1L-Opta-Local/web/package.json
+++ b/1-Apps/1L-Opta-Local/web/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@streamdown/code": "^1.0.2",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-virtual": "^3.13.18",
     "date-fns": "^4.1.0",
     "framer-motion": "^12",
