--- a/1-Apps/optalocal/1R-Opta-Accounts/package.json
+++ b/1-Apps/optalocal/1R-Opta-Accounts/package.json
@@ -27,6 +27,10 @@
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
+    "eslint": "^9.39.3",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "4.1.18",
     "typescript": "^5.8.3"
   }
