feat(daemon): enforce client/daemon contract version and quality gate

--- a/1-Apps/optalocal/1D-Opta-CLI-TS/package.json
+++ b/1-Apps/optalocal/1D-Opta-CLI-TS/package.json
@@ -19,6 +19,8 @@
     "build": "tsup src/index.ts src/daemon/worker-pool-worker.ts src/core/tools/executors.ts --format esm --dts --clean",
     "start": "node dist/index.js",
     "test": "vitest",
+    "test:run": "vitest --run",
+    "test:ci": "npm run typecheck && npm run lint && npm run build && npm run check-dist && npm run test:run",
     "test:tui": "vitest tests/tui/",
     "test:core": "vitest tests/core/ tests/utils/ tests/ui/",
     "test:browser:gates": "vitest run tests/browser/quality-gates.test.ts tests/integration/browser-artifact-completeness-gate.test.ts",
@@ -40,8 +42,10 @@
     "dev:chat": "node_modules/.bin/tsx src/index.ts chat",
     "dev:chat:watch": "node_modules/.bin/tsx watch src/index.ts chat",
     "prepare": "npm run build",
-    "check-dist": "node -e \"const fs=require('fs');const s=fs.statSync('dist/index.js');if(s.size===0)throw new Error('dist/index.js is empty \u2014 run npm run build')\"",
-    "postbuild": "node --eval \"const s=require('fs').statSync('dist/index.js');if(s.size===0){console.error('FATAL: dist/index.js is empty \u2014 tsup --clean was interrupted');process.exit(1)}\""
+    "check-dist": "node -e \"const fs=require('fs');const s=fs.statSync('dist/index.js');if(s.size===0)throw new Error('dist/index.js is empty — run npm run build')\"",
+    "postbuild": "node --eval \"const s=require('fs').statSync('dist/index.js');if(s.size===0){console.error('FATAL: dist/index.js is empty — tsup --clean was interrupted');process.exit(1)}\"",
+    "test:contract": "vitest run tests/protocol/operations-contract.test.ts tests/daemon/http-server.test.ts tests/daemon/client-contract.test.ts",
+    "quality:gate": "npm run typecheck && npm run test:contract && npm run test:parity:core-smoke"
   },
   "optionalDependencies": {
     "playwright": "^1.50.0"
