--- a/1-Apps/optalocal/1D-Opta-CLI-TS/.github/workflows/ci.yml
+++ b/1-Apps/optalocal/1D-Opta-CLI-TS/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ["20", "22"]
+        node-version: ['20', '22']
 
     steps:
       - uses: actions/checkout@v4
@@ -25,9 +25,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Type check
-        run: npm run typecheck
-
       - name: Build
         run: npm run build
 
@@ -36,3 +33,6 @@ jobs:
 
       - name: Lint
         run: npm run lint
+
+      - name: Quality gate
+        run: npm run quality:gate
