fix(web): add daemon-client + protocol-shared as workspace deps for Vercel build
Previously these were resolved via tsconfig path aliases which worked
locally but failed on Vercel because the bundler couldn't resolve the
workspace packages. Now they're proper workspace:* dependencies and
the tsconfig aliases are removed (pnpm handles resolution).

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
   # optalocal domain
   - "1-Apps/optalocal/1L-Opta-Local/web"
   - "1-Apps/optalocal/1D-Opta-CLI-TS"
+  - "1-Apps/optalocal/1D-Opta-CLI-TS/packages/*"
   - "1-Apps/optalocal/1O-Opta-Init"
   # shared
   - "1-Apps/shared/1A-AI-Components/components-web"
