--- a/1-Apps/optalocal/1L-Opta-Local/web/package.json
+++ b/1-Apps/optalocal/1L-Opta-Local/web/package.json
@@ -38,7 +38,9 @@
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
     "streamdown": "^2.2.0",
-    "swr": "^2.3"
+    "swr": "^2.3",
+    "@opta/daemon-client": "workspace:*",
+    "@opta/protocol-shared": "workspace:*"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.1",
