fix(web): use tsconfig paths instead of workspace deps for cross-package imports
Workspace deps with subpath exports don't resolve on Vercel's build
environment. Reverting to tsconfig path aliases which turbopack resolves
via the monorepo root setting.

--- a/1-Apps/optalocal/1L-Opta-Local/web/package.json
+++ b/1-Apps/optalocal/1L-Opta-Local/web/package.json
@@ -38,9 +38,7 @@
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
     "streamdown": "^2.2.0",
-    "swr": "^2.3",
-    "@opta/daemon-client": "workspace:*",
-    "@opta/protocol-shared": "workspace:*"
+    "swr": "^2.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.1",
