--- a/1-Apps/optalocal/1L-Opta-Local/web/tsconfig.json
+++ b/1-Apps/optalocal/1L-Opta-Local/web/tsconfig.json
@@ -26,6 +26,18 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@opta/daemon-client": [
+        "../../1D-Opta-CLI-TS/packages/daemon-client/src/index.ts"
+      ],
+      "@opta/daemon-client/*": [
+        "../../1D-Opta-CLI-TS/packages/daemon-client/src/*"
+      ],
+      "@opta/protocol-shared": [
+        "../../1D-Opta-CLI-TS/packages/protocol-shared/src/index.ts"
+      ],
+      "@opta/protocol-shared/*": [
+        "../../1D-Opta-CLI-TS/packages/protocol-shared/src/*"
       ]
     }
   },
