--- a/1-Apps/optalocal/1P-Opta-Code-Desktop/.github/workflows/opta-code-windows-build.yml
+++ b/1-Apps/optalocal/1P-Opta-Code-Desktop/.github/workflows/opta-code-windows-build.yml
@@ -3,6 +3,8 @@ name: Opta Code — Windows Build
 on:
   push:
     branches: [main]
+    tags:
+      - "v*"
     paths:
       - "1-Apps/optalocal/1P-Opta-Code-Desktop/**"
       - ".github/workflows/opta-code-windows-build.yml"
@@ -11,6 +13,9 @@ on:
     paths:
       - "1-Apps/optalocal/1P-Opta-Code-Desktop/**"
   workflow_dispatch:
+  schedule:
+    # Nightly Windows installer health run (UTC)
+    - cron: "0 6 * * *"
 
 defaults:
   run:
@@ -58,7 +63,19 @@ jobs:
       - name: Install Node dependencies
         run: npm ci
 
-      # Authenticode signing — only runs when WINDOWS_CERTIFICATE secret is set.
+      - name: Require Authenticode secrets on release tags
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
+          WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
+        shell: pwsh
+        run: |
+          if ([string]::IsNullOrWhiteSpace($env:WINDOWS_CERTIFICATE) -or [string]::IsNullOrWhiteSpace($env:WINDOWS_CERTIFICATE_PASSWORD)) {
+            Write-Error "Release tag builds require WINDOWS_CERTIFICATE and WINDOWS_CERTIFICATE_PASSWORD secrets."
+            exit 1
+          }
+
+      # Authenticode signing — only runs when both certificate secrets are set.
       # To enable code signing:
       #   1. Obtain an Authenticode PFX certificate
       #   2. Store base64(PFX) as repository secret WINDOWS_CERTIFICATE
@@ -67,7 +84,7 @@ jobs:
       - name: Configure Authenticode signing
         if: env.SIGNING_ENABLED == 'true'
         env:
-          SIGNING_ENABLED: ${{ secrets.WINDOWS_CERTIFICATE != '' }}
+          SIGNING_ENABLED: ${{ secrets.WINDOWS_CERTIFICATE != '' && secrets.WINDOWS_CERTIFICATE_PASSWORD != '' }}
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
         shell: pwsh
@@ -113,7 +130,7 @@ jobs:
     name: Windows smoke test
     runs-on: windows-latest
     needs: windows-build
-    if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule' || (github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')))
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
@@ -144,12 +161,12 @@ jobs:
           path: dist-artifacts/windows-smoke.log
           if-no-files-found: error
 
-  # Full NSIS install/liveness/uninstall smoke — manual trigger only (slow, ~5 min)
+  # Full NSIS install/liveness/uninstall smoke — release-candidate + nightly gate (slow, ~5 min)
   windows-installer-smoke:
     name: Windows installer smoke (install/uninstall)
     runs-on: windows-latest
     needs: windows-build
-    if: github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'schedule' || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/'))
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
@@ -176,7 +193,7 @@ jobs:
   windows-release-readiness:
     name: Windows release readiness summary
     runs-on: ubuntu-latest
-    needs: [unit-tests, windows-build, windows-smoke]
+    needs: [unit-tests, windows-build, windows-smoke, windows-installer-smoke]
     if: always()
     steps:
       - name: Publish readiness summary
@@ -184,6 +201,8 @@ jobs:
           UNIT_RESULT: ${{ needs.unit-tests.result }}
           BUILD_RESULT: ${{ needs.windows-build.result }}
           SMOKE_RESULT: ${{ needs.windows-smoke.result }}
+          INSTALLER_SMOKE_RESULT: ${{ needs.windows-installer-smoke.result }}
+          REQUIRE_INSTALLER_SMOKE: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'schedule' || startsWith(github.ref, 'refs/tags/') }}
           EVENT_NAME: ${{ github.event_name }}
           REF_NAME: ${{ github.ref }}
         run: |
@@ -195,9 +214,11 @@ jobs:
             echo "| unit-tests | ${UNIT_RESULT} |"
             echo "| windows-build | ${BUILD_RESULT} |"
             echo "| windows-smoke | ${SMOKE_RESULT} |"
+            echo "| windows-installer-smoke | ${INSTALLER_SMOKE_RESULT} |"
             echo ""
             echo "Event: ${EVENT_NAME}"
             echo "Ref: ${REF_NAME}"
+            echo "Require installer smoke: ${REQUIRE_INSTALLER_SMOKE}"
           } >> "$GITHUB_STEP_SUMMARY"
 
           if [ "${UNIT_RESULT}" != "success" ]; then
@@ -212,5 +233,10 @@ jobs:
 
           if [ "${SMOKE_RESULT}" != "success" ]; then
             echo "windows-smoke gate failed (${SMOKE_RESULT})"
+            exit 1
+          fi
+
+          if [ "${REQUIRE_INSTALLER_SMOKE}" = "true" ] && [ "${INSTALLER_SMOKE_RESULT}" != "success" ]; then
+            echo "windows-installer-smoke gate failed (${INSTALLER_SMOKE_RESULT})"
             exit 1
           fi
