--- a/1-Apps/optalocal/1P-Opta-Code-Desktop/package.json
+++ b/1-Apps/optalocal/1P-Opta-Code-Desktop/package.json
@@ -18,6 +18,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@opta/daemon-client": "file:../1D-Opta-CLI-TS/packages/daemon-client",
+    "@opta/protocol-shared": "file:../1D-Opta-CLI-TS/packages/protocol-shared",
     "lucide-react": "^0.575.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
