ci(opta-cli): fix monorepo npm cache lockfile path for release workflow

--- a/.github/workflows/opta-cli-release.yml
+++ b/.github/workflows/opta-cli-release.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           node-version: '22'
           cache: 'npm'
+          cache-dependency-path: 1-Apps/optalocal/1D-Opta-CLI-TS/package-lock.json
 
       - name: Install dependencies
         run: npm ci
@@ -49,6 +50,7 @@ jobs:
           node-version: '22'
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
+          cache-dependency-path: 1-Apps/optalocal/1D-Opta-CLI-TS/package-lock.json
 
       - name: Install dependencies
         run: npm ci
@@ -72,6 +74,7 @@ jobs:
         with:
           node-version: '22'
           cache: 'npm'
+          cache-dependency-path: 1-Apps/optalocal/1D-Opta-CLI-TS/package-lock.json
 
       - name: Install dependencies
         run: npm ci
