--- a/.github/workflows/opta-cli-release.yml
+++ b/.github/workflows/opta-cli-release.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: '22'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Test CI gate
         run: npm run test:ci
@@ -49,7 +49,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Publish to npm
         run: npm publish --access public
@@ -71,7 +71,7 @@ jobs:
           node-version: '22'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build npm package tarball
         run: |
