--- a/1-Apps/optalocal/1V-Opta-Learn/package.json
+++ b/1-Apps/optalocal/1V-Opta-Learn/package.json
@@ -1,12 +1,31 @@
 {
-  "name": "1v-opta-learn",
+  "name": "opta-learn",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev -p 3007",
+    "build": "next build --webpack",
+    "lint": "eslint ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "clsx": "^2",
+    "framer-motion": "^12",
+    "fuse.js": "^7",
+    "lucide-react": "^0.575.0",
+    "next": "^16.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10",
+    "eslint": "^9",
+    "eslint-config-next": "^16",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
